Mongo-express-DB/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: mongodb-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports: #Inside the pod we can open multiple ports.
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongodb-express
spec:
  selector:
    app: mongo-express
  # type: LoadBalancer #This type makes the service accessble by external requests by assigning the service with external Ip address.
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30000 #This is the port where the external IP address will be open. It has a range btw 30k to some 37k
