Mongo-express-DB/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment #Name should be unique within the Namespace
  namespace: mongodb-express
spec: #Specification that describes the desired state of the deployment
  selector:
    matchLabels:
      app: mongodb
  replicas: 1 #Tells deployment to run 1 pod matching the template
  template: #Template for creating new pods under this deployment
    metadata:
      labels: #Labels applied to all pods created from this template. Should match deployment selector.
        app: mongodb
    spec: #Specification of the pod, defining the containers that should be run.
      containers:
        - name: mongodb #Name of the container which should be unique within the pod.
          image: mongo
          ports:
            - containerPort: 27017 #The MongoDB server in the image listens on the standard MongoDB port, 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongodb-express
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
